SDK and Library versions increased. Tests rewritten. Bugs resolved.